ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend-restaurants
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mypizza.eatsout.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-pizza-web-service
              port:
                number: 80
  - host: burgerandtacos.eatsout.com
    http:
      paths:
        - pathType: Prefix
          path: "/burgers"
          backend:
            service:
              name: nginx-burger-web-service
              port:
                number: 80
        - pathType: Prefix
          path: "/tacos"
          backend:
            service:
              name: nginx-tacos-web-service
              port:
                number: 80
